--- a/src/components/SearchForm/SearchForm.module.scss
+++ b/src/components/SearchForm/SearchForm.module.scss
@@ -3,39 +3,52 @@
 .searchForm {
     display: flex;
     justify-content: center;
-}
+    align-items: center;
+    margin-bottom: 12px;
 
-.button {
-    background: $color-success;
-    border: 0;
-    color: $color-light;
-    text-align: center;
-    line-height: 1.3;
-    padding: $base-size;
-    margin: 0 $base-size $base-size $base-size;
-    border-radius: $radius;
-    cursor: pointer;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: $transition;
-
-    &:hover {
-        background: darken($color-success, 5%);
+    input {
+        height: 32px;
+        padding: 4px 8px;
+        font-size: 14px;
+        border-radius: $radius;
+        border: 1px solid #ccc;
+        outline: none;
     }
 
-    &.danger {
-        background: $color-warning;
+    .button {
+        height: 32px;
+        padding: 0 12px;
+        margin-left: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: $color-success;
+        border: 0;
+        color: $color-light;
+        border-radius: $radius;
+        cursor: pointer;
+        font-weight: 700;
+        text-transform: uppercase;
+        transition: $transition;
 
         &:hover {
-            background: darken($color-warning, 5%);
+            background: darken($color-success, 5%);
         }
-    }
 
-    &.transparent {
-        background: transparent;
+        &.danger {
+            background: $color-warning;
 
-        &:hover {
-            color: darken($color-light, 20%);
+            &:hover {
+                background: darken($color-warning, 5%);
+            }
+        }
+
+        &.transparent {
+            background: transparent;
+
+            &:hover {
+                color: darken($color-light, 20%);
+            }
         }
     }
 }
