--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,10 @@ body {
   letter-spacing: 0.5px;
 }
 
+.main-layout {
+  padding-top: 120px;
+}
+
 :global(.container) {
   width: 90%;
   max-width: 1400px;
