--- a/src/components/ListForm/ListForm.module.scss
+++ b/src/components/ListForm/ListForm.module.scss
@@ -12,32 +12,17 @@
   border: 1px solid $color-dark;
 }
 
-.button {
-  padding: $base-size $base-size * 2;
-  border: none;
-  border-radius: $radius;
-  background: $color-dark;
-  color: $color-light;
-  cursor: pointer;
-  transition: background 0.3s;
-
-  &:hover {
-    background: darken($color-dark, 10%);
-  }
-}
-
-.addCardButton {
-  padding: 12px 16px;
+.addListButton {
+  padding: $base-size 2*$base-size;
   background-color: #26DE81;
   color: #fff;
-  font-size: 16px;
   font-weight: 600;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
-}
 
-.addCardButton:hover {
-  background-color: darken(#26DE81, 10%);
+  &:hover {
+    background-color: darken(#26DE81, 10%);
+  }
 }
