--- a/src/components/pages/Favorite.module.scss
+++ b/src/components/pages/Favorite.module.scss
@@ -1,7 +1,33 @@
-.container {
+@import '../../styles/settings.scss';
+
+.columns {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center; 
+  flex-wrap: wrap;
+  gap: $base-size;
+}
+
+.column {
+  flex-shrink: 0;
+  width: calc(33% - 12px);
+  background: $color-light;
+  margin: 0 $base-size $base-size 0;
+  padding: $base-size * 1.5;
+  border-radius: $radius;
+  box-shadow: 0 ($base-size / 4) 0 rgba(0,0,0,0.3);
+  color: $color-dark;
+
+  &:last-child {
+    margin: 0 0 $base-size 0;
+  }
+}
+
+.title {
   text-align: center;
-  margin: 40px 0;
+  font-size: $base-size * 1.5;
+  margin: 0 0 $base-size * 1.5 0;
+}
+
+.cards {
+  padding: $base-size / 2 0;
 }
