--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -26,3 +26,23 @@
     color: #f1c40f;
   }
 }
+
+.deleteButton {
+  margin-left: 8px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  color: red;
+}
+
+.deleteButton:hover {
+  color: darkred;
+}
+
+@media (max-width: 767px) {
+  .column {
+    width: 100%;
+    margin: 0 0 $base-size 0;
+  }
+}
